trunk/Archive/e8f6ed06c6df5b389b07d6278d2622c9-433f808ed6b95a686aeb169da4e46d97/output
+ g++ -std=c++11 -O3 -pthread main.cpp
main.cpp:1:1: error: ‘Ranged’ does not name a type
 Ranged 10. You conjure a pillar of crackling energy in an unoccupied square within range. 
 ^
